--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "build": "node src/server.js"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
